syntax = "proto2";

import "lib/common.proto";

// Next: 15
message DriveProto
{
    optional int32 drive = 1
        [ default = 0, (help) = "which drive to write to (0 or 1)" ];
    optional IndexMode index_mode = 2
        [ default = INDEXMODE_DRIVE, (help) = "index pulse source" ];
    optional int32 hard_sector_count = 3
        [ default = 0, (help) = "number of hard sectors on disk" ];
    optional bool high_density = 4
        [ default = true, (help) = "set if this is a high density disk" ];
    optional bool sync_with_index = 5
        [ default = false, (help) = "start reading at index mark" ];
    optional double revolutions = 6
        [ default = 1.2, (help) = "number of revolutions to read" ];

    optional int32 tracks = 7
        [ default = 81, (help) = "Number of tracks supported by drive" ];
    optional int32 heads = 8
        [ default = 2, (help) = "Number of heads supported by drive" ];
    optional int32 head_bias = 9 [
        default = 0,
        (help) = "Bias to apply to the head position (in tracks)"
    ];
    optional int32 group_offset = 14 [
        default = 0,
        (help) = "When writing groups, erase all tracks except this one in each group"
    ];
    optional int32 head_width = 10
        [ default = 1, (help) = "Width of the head (in tracks)" ];
    optional int32 tpi = 11 [ default = 96, (help) = "TPI of drive" ];
    optional double rotational_period_ms = 12
        [ default = 0, (help) = "Rotational period of the drive in milliseconds (0 to autodetect)"];
}

// vim: ts=4 sw=4 et
