syntax = "proto2";

import "lib/common.proto";

message ImgInputOutputProto {}

message DiskCopyInputProto {}
message ImdInputProto {}
message Jv3InputProto {}
message D64InputProto {}
message NsiInputProto {}
message Td0InputProto {}
message DimInputProto {}
message FdiInputProto {}
message D88InputProto {}
message NFDInputProto {}

// NEXT_TAG: 14
message ImageReaderProto
{
    optional string filename = 1 [ (help) = "filename of input sector image" ];
    optional bool filesystem_sector_order = 13 [
        (help) = "read/write sector image in filesystem order",
        default = false
    ];

    oneof format
    {
        ImgInputOutputProto img = 2;
        DiskCopyInputProto diskcopy = 3;
        ImdInputProto imd = 4;
        Jv3InputProto jv3 = 5;
        D64InputProto d64 = 6;
        NsiInputProto nsi = 7;
        Td0InputProto td0 = 8;
        DimInputProto dim = 9;
        FdiInputProto fdi = 10;
        D88InputProto d88 = 11;
        NFDInputProto nfd = 12;
    }
}
